feat: hertz && kitex init

--- a/cp-core/conf/conf.local.yml
+++ b/cp-core/conf/conf.local.yml
@@ -4,3 +4,11 @@ CP_MYSQL_CONFIG:
   CP_MYSQL_DATABASE: chat_paper_db
   CP_MYSQL_HOST: 127.0.0.1
   CP_MYSQL_PORT: 3306
+
+CP_GATEWAY_CONFIG:
+  CP_GATEWAY_HOST: 127.0.0.1
+  CP_GATEWAY_PORT: 9090
+
+CP_USER_SERVICE_CONFIG:
+  CP_USER_SERVICE_HOST: 127.0.0.1
+  CP_USER_SERVICE_PORT: 8080
