--- a/cp-core/conf/conf.local.yml
+++ b/cp-core/conf/conf.local.yml
@@ -12,3 +12,7 @@ CP_GATEWAY_CONFIG:
 CP_USER_SERVICE_CONFIG:
   CP_USER_SERVICE_HOST: 127.0.0.1
   CP_USER_SERVICE_PORT: 8080
+
+CP_ARTICLE_SERVICE_CONFIG:
+  CP_ARTICLE_SERVICE_HOST: 127.0.0.1
+  CP_ARTICLE_SERVICE_PORT: 7777
