feat: etcd config

--- a/cp-core/conf/conf.local.yml
+++ b/cp-core/conf/conf.local.yml
@@ -5,6 +5,10 @@ CP_MYSQL_CONFIG:
   CP_MYSQL_HOST: 127.0.0.1
   CP_MYSQL_PORT: 3306
 
+CP_ETCD_CONFIG:
+  CP_ETCD_HOST: 127.0.0.1
+  CP_ETCD_PORT: 2379
+
 CP_GATEWAY_CONFIG:
   CP_GATEWAY_HOST: 127.0.0.1
   CP_GATEWAY_PORT: 9090
