--- a/cp-core/conf/conf.local.yml
+++ b/cp-core/conf/conf.local.yml
@@ -20,3 +20,7 @@ CP_USER_SERVICE_CONFIG:
 CP_ARTICLE_SERVICE_CONFIG:
   CP_ARTICLE_SERVICE_HOST: 127.0.0.1
   CP_ARTICLE_SERVICE_PORT: 7777
+
+CP_COMMENT_SERVICE_CONFIG:
+  CP_COMMENT_SERVICE_HOST: 127.0.0.1
+  CP_COMMENT_SERVICE_PORT: 8000
